<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.calculadora.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/visorTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25pt"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/text0" />

        <Button
            android:id="@+id/bt1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/text1" />

        <Button
            android:id="@+id/bt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/text2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/text3" />

        <Button
            android:id="@+id/bt4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/text4" />

        <Button
            android:id="@+id/bt5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/text5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/text6" />

        <Button
            android:id="@+id/bt7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/text7" />

        <Button
            android:id="@+id/bt8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_weight="1"
            android:text="@string/text8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt9"
            android:layout_width="60pt"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/text9" />

        <Button
            android:id="@+id/limparTela"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:layout_height="wrap_content"
            android:text="@string/limparTela" />

    </LinearLayout>




</LinearLayout>